[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dwlabbind"
version = "0.1.0"
description = "Object-oriented BIND server management with XML config and REST API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[project.scripts]
bind9manager = "scripts.bind9manager:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
